--- a/registrarse.html
+++ b/registrarse.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="registrarse.css">
-    <script src="registrarse.js"></script>
 </head>
 <body>
     <div class="register-container">
         <h2>Registro</h2>
-        <form action="registrarse.php" method="post">
+        <form action="registro.php" method="post">
             <label for="nombre">Nombre completo:</label>
             <input type="text" id="nombre" name="nombre" required>
             
