--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <button type="submit">Iniciar sesión</button>
         </form>
-        <p>¿No tienes una cuenta? <a href="register.html">Regístrate aquí</a></p>
+        <p>¿No tienes una cuenta? <a href="registrarse.html">Regístrate aquí</a></p>
     </div>
 </body>
 </html>
