--- a/registrarse.html
+++ b/registrarse.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="registrarse.css">
+    <link rel="stylesheet" href="Registrarse.css">
 </head>
 <body>
     <div class="register-container">
         <h2>Registro</h2>
-        <form action="registro.php" method="post">
+        <form action="Registro.php" method="post">
             <label for="nombre">Nombre completo:</label>
             <input type="text" id="nombre" name="nombre" required>
             
