--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Iniciar sesión</h2>
-        <form id="loginForm" action="inicio_de_sesion.php" method="post">
+        <form id="loginForm" action="Inicio_de_sesion.php" method="post">
             <label for="username">Usuario:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Contraseña:</label>
@@ -20,7 +20,7 @@
             </div>
             <button type="submit">Iniciar sesión</button>
         </form>
-        <p>¿No tienes una cuenta? <a href="registrarse.html">Regístrate aquí</a></p>
+        <p>¿No tienes una cuenta? <a href="Registrarse.html">Regístrate aquí</a></p>
     </div>
 </body>
 </html>
